# GitHub_Collaboration_Relation_Extraction

./: main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
GH_CoRE/: __init__.py  data_dict_settings.py
GH_CoRE/model/: Attribute_getter.py  Entity_search.py  Relation_extraction.py
GH_CoRE/utils/: request_api.py
GH_CoRE/working_flow/: body_content_preprocessing.py
data/github_osdb_data/GitHub_Collaboration_Network_repos/: TuGraph-family_tugraph-db_2023.csv  apache_kylin_2023.csv  test.csv
data/github_osdb_data/repos/: apache_kylin_2023.csv
data/github_osdb_data/repos_dedup_content/: apache_kylin_2023.csv
data/github_osdb_data/result/: GitHub_Collaboration_Network_elastic_elasticsearch_2023.csv  GitHub_Collaboration_Network_test.csv
data/global_data/: data_description.csv
docs/: Information_Extraction_scheme.md
script/: __init__.py  body_content_preprocessing.py  identify_reference.py  query_OSDB_github_log.py
script/model/: Attribute_getter.py  ER_config_parser.py  Entity_model.py  Entity_recognition.py  Entity_search.py  Event_model.py  Relation_extraction.py  Relation_model.py  __init__.py
utils/: prepare_sql.py  request_api.py
