[build-system]
requires = ["setuptools==61.0", "wheel==0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gh_core"
version = "2.3.1"
requires-python = ">=3.9, <3.12"
authors = [
  {name = "birdflyi", email = "zhlou@stu.ecnu.edu.cn"},
]
description = "GitHub Collaboration Relation Extraction"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Relation Extraction", "GitHub event", "dataset"]
classifiers = [
      # Development Status, see https://pypi.org/classifiers/
      #   3 - Alpha
      #   4 - Beta
      #   5 - Production/Stable
      "Development Status :: 3 - Alpha",
      "Intended Audience :: Developers",
      "Intended Audience :: Science/Research",
      "License :: OSI Approved :: Apache Software License",
      "Operating System :: OS Independent",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.6",
      "Programming Language :: Python :: 3.7",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: Implementation :: PyPy",
      "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/birdflyi/GitHub_Collaboration_Relation_Extraction"
Repository = "https://github.com/birdflyi/GitHub_Collaboration_Relation_Extraction.git"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["etc"]
